# simulation_mvc

./: .env  README.md  project.MD  pyproject.toml  requirements.txt
docs/: .excalidraw
src/simulation/: main.py
src/simulation/app/: entity_dto.py  game.py  main.py  map_dto.py
src/simulation/core/: __init__.py
src/simulation/core/configs/: __init__.py  common.py  entity.py  map.py  services.py
src/simulation/domain/: exception.py
src/simulation/domain/entity/: base.py  creatures.py  entity_builder.py  landscape.py
src/simulation/domain/map/: map.py
src/simulation/interfaces/: presenter.py
src/simulation/interfaces/domain/: entity_dto.py
src/simulation/services/: path_finder.py
src/simulation/view/: console_view.py  tk_view.py
tests/: conftest.py
tests/app/: test_game.py  test_map_dto.py
tests/domain/: test_entities.py  test_map.py
tests/interfaces/: test_entity_dto.py
