[tool.poetry]
name = "simulation"
version = "0.1.0"
description = ""
authors = ["Alex Kor <dna1133@gmail.com>"]
readme = "README.md"
packages = [{include = "simulation", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.6.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "simulation.main:run"